--- a/Papers/Draft-1.tex
+++ b/Papers/Draft-1.tex
@@ -30,7 +30,26 @@
 
     \paragraph{5.5}{سلام}
 
-     دیگه چه خبر ؟
-     
+    سلام
+
+    \begin{itemize}
+        \item s
+        \begin{itemize}
+            \item s
+            \begin{itemize}
+                \item 
+            \end{itemize}
+        \end{itemize}
+        \item d
+        \item f
+        \item h
+    \end{itemize}
+
+    \begin{enumerate}
+        \item s
+        \item d
+        \item f
+        \item h
+    \end{enumerate}
 
 \end{document}
