--- a/Papers/Draft-1.tex
+++ b/Papers/Draft-1.tex
@@ -12,44 +12,17 @@
 \settextfont{Vazirmatn-Regular.ttf}
 
 \title{عنوان}
-\author{کیانوش}
-\date{}
+\author{
+    محمد خورشیدی روزبهانی\\mohammad\_khorshidi@outlook.fr\and
+    کیانوش صبوری\\kianoushsabouri@gmail.com}
+\date{\today}
 
+\linespread{1.5}
 
 \begin{document}
 
     \maketitle
-    \tableofcontents
-    \newpage
 
-    \section{بخش 1}
-
-    \subsection{زیر بخش مواد}
-
-    \subsubsection{زیر بخش زیر بخش هاااا}
-
-    \paragraph{5.5}{سلام}
-
-    سلام
-
-    \begin{itemize}
-        \item s
-        \begin{itemize}
-            \item s
-            \begin{itemize}
-                \item 
-            \end{itemize}
-        \end{itemize}
-        \item d
-        \item f
-        \item h
-    \end{itemize}
-
-    \begin{enumerate}
-        \item s
-        \item d
-        \item f
-        \item h
-    \end{enumerate}
+    
 
 \end{document}
